[package]
name = "theo"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A standalone renderer for windowing graphics"

[dependencies]
bytemuck = { version = "1.13.1", default-features = false }
cosmic-text = { version = "0.8.0", default-features = false, features = ["std", "swash"] }
glow = { version = "0.12.1", optional = true }
piet = { version = "0.6.2", default-features = false }
piet-cosmic-text = "0.2.0"
piet-glow = { version = "0.1.0", optional = true }
piet-wgpu = { version = "0.2.2", default-features = false, optional = true }
raw-window-handle = "0.5.0"
softbuffer = "0.2.0"
tiny-skia = { version = "0.8.3", default-features = false, features = ["std"] }
tiny-skia-path = "0.8.3"
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false }
wgpu0 = { package = "wgpu", version = "0.16.0", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.30.6", default-features = false, optional = true, features = ["egl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.61"
features = ["HtmlCanvasElement", "WebGl2RenderingContext", "WebGlRenderingContext", "Window", "Document", "Element"]

[features]
default = ["gl", "x11", "wayland", "egl", "glx", "wgl", "wgpu"]
gl = ["glow", "glutin", "piet-glow"]
x11 = ["glutin?/x11", "softbuffer/x11"]
wayland = ["glutin?/wayland", "softbuffer/wayland"]
egl = ["gl", "glutin/egl"]
glx = ["gl", "glutin/glx"]
wgl = ["gl", "glutin/wgl"]
wgpu = ["piet-wgpu", "wgpu0"]

[build-dependencies]
cfg_aliases = "0.1.1"

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false, features = ["color"] }
futures-lite = "1.13.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }
instant = "0.1.12"
tracing = { version = "0.1.37", features = ["log"] }
winit = { version = "0.28.1", default-features = false, features = ["x11"] }

[target.'cfg(not(any(windows, target_arch = "wasm32")))'.dev-dependencies]
x11-dl = "2.21.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"

[workspace]
members = ["run-wasm"]
